Update Create and Delete Project tests, add Get project with api and create project with api

--- a/mantisBt/mantisBt.csproj
+++ b/mantisBt/mantisBt.csproj
@@ -5,8 +5,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
-    <IsPackable>false</IsPackable>
-    <IsTestProject>true</IsTestProject>
+    <IsPackable>false</IsPackable>    
+	<IsTestProject>true</IsTestProject>
+	<RunSettingsFilePath>$(MSBuildProjectDirectory)\nunit.runsettings</RunSettingsFilePath>
   </PropertyGroup>
 
   <ItemGroup>
